# financial-management

./: .gitignore  task_list.md
FinManagApp/: package.json
backend/: README.md  app.py  pyproject.toml
fin-manag-client/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
fin-manag-client/src/: App.vue
fin-manag-client/src/components/: Carousel.vue  Hero.vue  HomeCards.vue  JobListing.vue  JobListings.vue  NavBar.vue
fin-manag-client/src/router/: index.ts
fin-manag-client/src/views/: Home.vue
frontend/: package.json  pnpm-lock.yaml  tsconfig.node.json
frontend/src/components/: Card.vue  Hero.vue  HomeCards.vue  JobListing.vue  JobListings.vue  NavBar.vue
frontend/src/router/: index.ts
frontend/src/views/: Home.vue  Job.vue  Jobs.vue  NotFound.vue
