[tool.poetry]
name = "financial-management-backend"
version = "0.1.0"
description = "Backend API for financial management application"
authors = ["Ali Hamood <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

